<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorwhite"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Let's create  your \naccount"
                android:textColor="@color/colorblack"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/ed_fname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colortext"
                    android:textColorHint="@color/colortext"
                    android:hint="@string/firstname" />
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/ed_lname"
                    android:layout_width="match_parent"
                    android:textColor="@color/colortext"
                    android:textColorHint="@color/colortext"  android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/lastname" />
            </LinearLayout>

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext"    android:layout_marginTop="10dp"
                android:hint="@string/enteremial" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext" android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext"    android:layout_marginTop="10dp"
                android:hint="@string/mobile" />

            <EditText
                android:id="@+id/ed_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colortext"
                android:textColorHint="@color/colortext" android:layout_marginTop="10dp"
                android:hint="@string/city" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9"
            android:orientation="vertical"
            android:padding="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                   android:gravity="center"
                android:text="By signing up, you agree to our Terms and Policy"
                android:textColor="@color/colorblack" />

            <Button
                android:id="@+id/btn_singup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/button"
                android:text="@string/singup"
                style="@style/Font"
                android:textAllCaps="false"
                android:textColor="@color/colorwhite" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>